--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -1,7 +1,12 @@
+
+
 .jumbotron{
 
 background-image: url("https://i.pinimg.com/originals/67/18/22/671822c2f63dd5f65d8fd15c9710420b.jpg");
 background-size: cover;
 color: white;
 
+}
+.Component{
+    background-color: black;
 }
