--- a/client/src/component/shoppingCart/card/card.css
+++ b/client/src/component/shoppingCart/card/card.css
@@ -2,6 +2,11 @@
     margin: 40px;
     
 }
-.Card{
-    block-size: small;
+
+.purchase-card{
+    width: wrap;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    padding: 1em;
+    margin-top: 20px;
+    margin: auto;
 }
