--- a/client/src/component/shoppingCart/card/card.css
+++ b/client/src/component/shoppingCart/card/card.css
@@ -1,12 +1,14 @@
-.container{
-    margin: 40px;
+.container_cards{
+    margin: 10px;
+    columns: 1 auto;
+    
     
 }
 
 .purchase-card{
-    width: wrap;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 1em;
-    margin-top: 20px;
-    margin: auto;
+    margin: 1px;
+    
+
 }
