--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,12 @@
   text-align: center;
   text-decoration-color: blanchedalmond;
   
+  
 }
 .collection{
   margin: auto;
+}
+.col{
+  columns: 2 auto;
+  padding: 20px;
 }
