--- a/client/src/component/shoppingCart/card/card.css
+++ b/client/src/component/shoppingCart/card/card.css
@@ -8,7 +8,10 @@
 .purchase-card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 1em;
-    margin: 1px;
+    margin: 10px;
+    flex-wrap: wrap;
+    align-content: right;
+    
     
 
 }
