--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,39 +1,59 @@
 .App {
-  text-align: center;
-  text-decoration-color: blanchedalmond;
+    text-align: center;
+    text-decoration-color: blanchedalmond;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  max-height: 20vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    max-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* wishlist section */
+
+.container.page-container {
+    height: calc(100vh - 80px);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.wishlist {
+    border-radius: 4px;
+    background-color: #dddddd;
+    flex-grow: 1;
+    height: 100%;
+}
+
+.wishlist .wishlist-title {
+    border-bottom: 2px solid #343434;
 }
