--- a/client/src/component/shoppingCart/card/card.css
+++ b/client/src/component/shoppingCart/card/card.css
@@ -1,6 +1,6 @@
 .container_cards{
     margin: 10px;
-    columns: 1 auto;
+    /* columns: 1 auto; */
     
     
 }
@@ -9,9 +9,10 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     padding: 1em;
     margin: 10px;
-    flex-wrap: wrap;
-    align-content: right;
-    
-    
+    /* flex-wrap: wrap;
+    align-content: right; */ 
 
+}
+.items{
+    align-items: center;
 }
