massive addition going on

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,13 +5,13 @@
   /* Product section Begin */
 }
 .container{
-  padding: 10px;
+  padding: auto;
 
 }
 .purchase-card{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  padding: 1em;
-  margin: 10px;
+  margin: 50px;
+  
 }
 
   /* Product section End */
